--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
